--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="p-Norm Unit Ball" />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="Exploration of the mathematical problem of graphing the p-norm unit ball in 3 dimensions." />
-  <meta property="og:url" content="https://mimmackk.github.io/unitball/index.html" />
+  <meta property="og:url" content="https://mimmackk.github.io/unitball/" />
   <meta property="og:image" content="https://raw.githubusercontent.com/mimmackk/unitball/master/head.jpg" />
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -473,7 +473,7 @@ fig.update_layout(showlegend=False)</code></pre>
   <section>
     <h2>Appendix</h2>
 
-    <p>Final Python functions for 2D and 3D unit balls (on <a href="https://github.com/mimmackk/mini-math-scripts/blob/master/unitball/unitball.py">Github</a>):</p>
+    <p>Final Python functions for 2D and 3D unit balls (on <a href="https://github.com/mimmackk/unitball/blob/master/unitball.py">Github</a>):</p>
 
     <pre><code>import numpy as np
 import plotly.graph_objects as go
