--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <img class="center" src="img/animation3d.gif" alt="Animated 3D Unit Ball">
 
-    <p>Perhaps one reason the 3D unit ball isn't visualized often is that it's a pain in the ass to graph.</p>
+    <p>Perhaps one reason the 3D unit ball isn't visualized often is that it's a true pain to graph.</p>
 
     <p>Sure—graphing a sphere isn't hard, graphing a cube isn't hard, and graphing an octahedron isn't hard. But apparently graphing all three and every visual representation between them with one function is the opposite of "not hard."</p>
 
