minor text edit

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <img class="center" src="img/gridtosurface.png" alt="Mesh Grid to Surface">
 
-    <p>Approaching this problem this way turns out to be a <em>terrible</em> idea. If you're smarter than me, then you might already know why. If so, grab your popcorn for the train wreck, because I had to barrel through this mess first to figure it out.</p>
+    <p>Approaching this problem this way turns out to be a <em>terrible</em> idea. If you're smarter than me, then you might already know why. If so, lean back and enjoy the train wreck, because unfortunately I had to barrel through this whole mess first to figure it out.</p>
 
     <p>First, we need to figure out a formula for \(z\) that depends on \(x\) and \(y\). Since we're graphing the unit ball for variable \(p\), our points \((x, y, z)\) are going to have to satisfy \(\|(x, y, z)\|_p = 1\). So, we pull out the definition of the \(p\)-norm and do some minor rearrangements.</p>
     <p class="math">
