--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ fig.update_layout(showlegend=False)</code></pre>
 
     <p>By Kayden Mimmack, 2019.</p>
     
-    <p>Want to hire me? Check out my <a href="http://mimmackk.github.io">portfolio</a> (including other math visualization projects) or connect with me on <a href="https://www.linkedin.com/in/kjmimmack/">LinkedIn</a>.</p>
+    <p>Check out my <a href="http://mimmackk.github.io">portfolio</a> for other math visualization projects.</p>
 
   </section>
 
@@ -544,9 +544,9 @@ def unitball2d(p, smoothness = 8):
 
   fig.show()</code></pre>
 
-  <p>As a quick note, you could take advantage of the symmetry of this problem a lot more than I did here. We don't actually need to calculate \(x,y\) values for \(\theta \in [0, 2\pi]\); we only need to take \(\theta\) up to \(\pi/4\). We can then intelligently stack our resulting \(x\) and \(y\) values to fill out the entire \(x\)-\(y\) plane (similarly for \(z\) and \(\varphi\)). When I gave this a try, though, on my system at least, this didn't turn out to be any faster. Since we're not working with very many data points to begin with (we don't want to make our graph too slow, and we only need so much resolution to accurately visualize our object), it took longer for my system to do all the necessary gluing-together than to let numpy do its efficient large-matrix computations. However, my system of choice is a $150 Chromebook all Frankensteined-up running Ubuntu, so maybe don't take me at my word based on what the computing equivalent of Howl's Moving Castle says is speedy and efficient.</p>
+  <p>As a quick note, you could take advantage of the symmetry of this problem a lot more than I did here. We don't actually need to calculate \(x,y\) values for \(\theta \in [0, 2\pi]\); we only need to take \(\theta\) up to \(\pi/4\). We can then intelligently stack our resulting \(x\) and \(y\) values to fill out the entire \(x\)-\(y\) plane (similarly for \(z\) and \(\varphi\)). When I gave this a try, though, on my system at least, this didn't turn out to be any faster. Since we're not working with very many data points to begin with (we don't want to make our graph too slow, and we only need so much resolution to accurately visualize our object), it took longer for my system to do all the necessary gluing-together than to let numpy do its efficient large-matrix computations.</p>
 
-  <p>Additionally, the final interactive visualization given above is actually in JavaScript—I roughly translated it from the Python code in order to have a nice little thing to play with online. The code's not pretty, but if you want to look at the JavaScript version, it's on <a href="https://github.com/mimmackk/unitball/blob/master/live.js">GitHub</a> too.</p>
+  <p>Additionally, the final interactive visualization given above is actually translated into JavaScript in order to play nicely on the web. If you want to look at the JavaScript code, it's been written a little differently in order to prioritize quick dynamic updates. It's on <a href="https://github.com/mimmackk/unitball/blob/master/live.js">GitHub</a>.</p>
 
   </section>
 </article>
