--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>p-Norm Unit Ball</title>
-  <meta name="description" content="Exploration of the mathematical problem of graphing the p-norm unit ball in 3 dimensions.">
+  <meta name="description" content="How to graph a sphere, a cube, an octahedron, and every continuous shape in between with one function.">
   <meta name="author" content="Kayden Mimmack">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
